# trinity

./: .gitignore  CMakeLists.txt  README.md  main.cc
trinity/: CMakeLists.txt
trinity/include/: trinity.h
trinity/include/initializers/: initializer.h  ones_like.h  random_like.h  zeros_like.h
trinity/include/math_operations/: add.h  divide.h  dot.h  multiply.h  subtract.h  sum.h  transpose.h
trinity/include/ndarray/: matrix.h  ndarray.h
trinity/include/utilities/: calculate_index.h
